Downgraded jdk to 8